refactor: gestão de usuários