@@ -2,6 +2,7 @@ package com.projetointegrador.diarioclasse.service;
 
 import com.projetointegrador.diarioclasse.dto.request.ResponsavelRequest;
 import com.projetointegrador.diarioclasse.dto.request.patchrequest.ResponsavelPatchRequest;
+import com.projetointegrador.diarioclasse.dto.response.AlunoResponse;
 import com.projetointegrador.diarioclasse.dto.response.ResponsavelResponse;
 import com.projetointegrador.diarioclasse.entity.Aluno;
 import com.projetointegrador.diarioclasse.entity.Responsavel;
@@ -10,8 +11,10 @@ import com.projetointegrador.diarioclasse.repository.ResponsavelRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -22,10 +25,13 @@ public class ResponsavelService {
     private final AlunoRepository alunoRepository;
 
     public ResponsavelResponse criar(ResponsavelRequest request) {
-        List<Aluno> alunos = request.alunoIds().stream()
+        List<Aluno> alunos = Optional.ofNullable(request.alunoIds())
+                .orElse(List.of())
+                .stream()
                 .map(id -> alunoRepository.findById(id)
                         .orElseThrow(() -> new RuntimeException("Aluno não encontrado: " + id)))
-                .collect(Collectors.toList());
+                .toList();
+
 
         Responsavel responsavel = Responsavel.builder()
                 .nome(request.nome())
@@ -37,6 +43,35 @@ public class ResponsavelService {
         responsavelRepository.save(responsavel);
         return toResponse(responsavel);
     }
+
+    public ResponsavelResponse criarParaAluno(Long alunoId, ResponsavelRequest request) {
+        // 🔹 Busca o aluno
+        Aluno aluno = alunoRepository.findById(alunoId)
+                .orElseThrow(() -> new RuntimeException("Aluno não encontrado: " + alunoId));
+
+        // 🔹 Cria o responsável
+        Responsavel responsavel = Responsavel.builder()
+                .nome(request.nome())
+                .email(request.email())
+                .telefone(request.telefone())
+                .alunos(new ArrayList<>()) // sempre lista mutável
+                .build();
+
+        // 🔹 Salva o responsável (gera ID)
+        responsavelRepository.save(responsavel);
+
+        // 🔹 Faz o vínculo bidirecional
+        responsavel.getAlunos().add(aluno);
+        aluno.getResponsaveis().add(responsavel);
+
+        // 🔹 Salva ambos para garantir sincronização no banco
+        responsavelRepository.save(responsavel);
+        alunoRepository.save(aluno);
+
+        return toResponse(responsavel);
+    }
+
+
 
     public ResponsavelResponse atualizar(Long id, ResponsavelRequest request) {
         Responsavel responsavel = responsavelRepository.findById(id)
@@ -86,6 +121,21 @@ public class ResponsavelService {
                 .toList();
     }
 
+    public List<AlunoResponse> listarAlunosPorResponsavel(Long responsavelId) {
+        Responsavel responsavel = responsavelRepository.findById(responsavelId)
+                .orElseThrow(() -> new RuntimeException("Responsável não encontrado"));
+
+        return responsavel.getAlunos().stream()
+                .map(aluno -> new AlunoResponse(
+                        aluno.getId(),
+                        aluno.getNome(),
+                        aluno.getMatricula(),
+                        aluno.getDataNascimento(),
+                        aluno.getTurma() != null ? aluno.getTurma().getId() : null
+                ))
+                .toList();
+    }
+
     private ResponsavelResponse toResponse(Responsavel r) {
         List<Long> alunoIds = r.getAlunos() != null
                 ? r.getAlunos().stream().map(Aluno::getId).collect(Collectors.toList())
@@ -99,4 +149,5 @@ public class ResponsavelService {
                 alunoIds
         );
     }
+
 }
